--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -21,7 +21,7 @@
         <section class="filters">
             <div class="locations">
                 <h3>States</h3>
-                <h4>Califonia, Nigeria...</h4>
+                <h4>Nigeria, Canada...</h4>
             </div>
             <div class="amenities">
                 <h3>Amenities</h3>
