--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -18,32 +18,39 @@
     </header>
     
     <div class="container">
-        <section class="filters">
+        <section class="filters">  
             <div class="locations">
                 <h3>States</h3>
-                <h4>Califonia, Nigeria...</h4>
+                <h4>Nigeria, Canada...</h4>
                 <div class="popover">
                     <h2>Nigeria</h2>
                     <ul>
                         <li>Abuja</li>
-                        <li>Lagos</li>
+                        <li>Porthacort</li>
                     </ul>
-                    <h2>United States</h2>
+                    <h2>Ghana</h2>
                     <ul>
-                        <li>Los Angels</li>
+                        <li>Abuja</li>
+                        <li>Porthacort</li>
+                    </ul>
+                    <h2>United State</h2>
+                    <ul>
+                        <li>Los Angel</li>
                         <li>London</li>
                     </ul>
                 </div>
             </div>
+               
             <div class="amenities">
                 <h3>Amenities</h3>
                 <h4>Internet, Kitchen...</h4>
                 <div class="popover">
                     <ul>
-                        <li>Internet</li>
-                        <li>TV</li>
-                        <li>Kitchen</li>
                         <li>Iron</li>
+                        <li>Laptop</li>
+                        <li>ALX intranet</li>
+                        <li>Gotv</li>
+                        <li>Graduation gown</li>
                     </ul>
                 </div>
             </div>
