--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="styles/3-header.css">
     <link rel="stylesheet" href="styles/3-footer.css">
     <link rel="stylesheet" href="styles/6-filters.css">
-    <link rel="stylesheet" href="styles/7-places.css">
     <link rel="shortcut icon" href="images/icon.png" type="image/x-icon">
 </head>
 <body>
@@ -19,51 +18,64 @@
     </header>
     
     <div class="container">
-        <section class="filters">
+        <section class="filters">  
             <div class="locations">
                 <h3>States</h3>
-                <h4>Califonia, Nigeria...</h4>
+                <h4>Nigeria, Canada...</h4>
                 <div class="popover">
                     <h2>Nigeria</h2>
                     <ul>
                         <li>Abuja</li>
-                        <li>Lagos</li>
+                        <li>Porthacort</li>
                     </ul>
-                    <h2>United States</h2>
+                    <h2>Ghana</h2>
                     <ul>
-                        <li>Los Angels</li>
+                        <li>Abuja</li>
+                        <li>Porthacort</li>
+                    </ul>
+                    <h2>United State</h2>
+                    <ul>
+                        <li>Los Angel</li>
                         <li>London</li>
                     </ul>
                 </div>
             </div>
+               
             <div class="amenities">
                 <h3>Amenities</h3>
                 <h4>Internet, Kitchen...</h4>
                 <div class="popover">
                     <ul>
-                        <li>Internet</li>
-                        <li>TV</li>
-                        <li>Kitchen</li>
                         <li>Iron</li>
+                        <li>Laptop</li>
+                        <li>ALX intranet</li>
+                        <li>Gotv</li>
+                        <li>Graduation gown</li>
                     </ul>
                 </div>
             </div>
             <button>Search</button>
         </section>
-        <section class="places">
-            <div class="place_title">
+        <section>
+            <div class="places">
                 <h1>Places</h1>
-            </div>
-            <div class="article_styling">
-                <article>
-                    <h2>My home</h2>
-                </article>
-                <article>
-                    <h2>Tiny house</h2>
-                </article>
-                <article>
-                    <h2>A suite</h2>
-                </article>
+                <div class="flex_me">
+                    <article>
+                        <div class="section_head">
+                            <h2>My home</h2>
+                        </div>
+                    </article>
+                    <article>
+                        <div class="section_head">
+                            <h2>Tiny house</h2>
+                        </div>
+                    </article>
+                    <article>
+                        <div class="section_head">
+                            <h2>A suite</h2>
+                        </div>
+                    </article>
+                </div>
             </div>
         </section>
     </div>
