--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -165,7 +165,7 @@
     <div class="empty">
         
     </div>
-    <footer 10px>
+    <footer>
         <p class="foot_style">Best School</p>
     </footer>
        
