--- a/web_static/100-index.html
+++ b/web_static/100-index.html
@@ -2,11 +2,11 @@
 <html>
     <!-- Coded by EnGentech -->
     <head>
-        <link rel="stylesheet" href="styles/common.css">
-        <link rel="stylesheet" href="styles/header.css">
-        <link rel="stylesheet" href="styles/footer.css">
-        <link rel="stylesheet" href="styles/filter.css">
-        <link rel="stylesheet" href="styles/places.css">
+        <link rel="stylesheet" href="styles/4-common.css">
+        <link rel="stylesheet" href="styles/3-header.css">
+        <link rel="stylesheet" href="styles/3-footer.css">
+        <link rel="stylesheet" href="styles/6-filter.css">
+        <link rel="stylesheet" href="styles/100-places.css">
         <link rel="shortcut icon" href="images/icon.png" type="image/x-icon">
     </head>
     <title>AirBnB clone</title>
