--- a/web_static/100-index.html
+++ b/web_static/100-index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="styles/4-common.css">
         <link rel="stylesheet" href="styles/3-header.css">
         <link rel="stylesheet" href="styles/3-footer.css">
-        <link rel="stylesheet" href="styles/6-filter.css">
+        <link rel="stylesheet" href="styles/6-filters.css">
         <link rel="stylesheet" href="styles/100-places.css">
         <link rel="shortcut icon" href="images/icon.png" type="image/x-icon">
     </head>
